# oil-prices

./: .gitignore  README.md  check_redis.py  next.config.mjs  package-lock.json  package.json  postcss.config.mjs  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json  vercel.json
api/: app.py  index.py  main.py  utils.py
api/routes/: admin.py  prices.py
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/api/: index.py
app/public/: index.html
components/: Header.tsx  PriceCard.tsx
public/: admin.html  index.html
